	  this is the raw java interface to PLplot.  Thus, a number of
	  adjustments had to be made to x09.java to work with this raw
	  interface.  However, once the user-friendly interface is done, it
	  should be possible to overload 1-d arrays when needed for xg0
	  through yg1, have angle wrap code, and also drop kx, lx, ky, ly.

2002-12-28  Alan W. Irwin <airwin@users.sourceforge.net>

	* Implement the simpler 2-d arrays for the swig-based Java API.  This
	  means all examples work other than x09 (contours), x15 (shade plots
	  with plshade), and x16 (shade plots with plshades).

2002-12-27  Alan W. Irwin <airwin@users.sourceforge.net>

	* Implement new swig-based Java API.  Two-dimensional arrays are
	  not implemented yet which means 6 of the examples do not work,
	  but the rest do work, and in fact example 18 works completely
	  for the first time ever because all PLplot functions in the common
	  API that have variable or one-dimensional array arguments have been 
	  completely implemented in Java.

2002-12-24  Maurice LeBrun <mlebrun@users.sourceforge.net>

	* examples/tcl/x??: Added script file front-ends to Tcl example
	  programs.  Locates pltcl via PATH.
	* examples/tcl/Makefile.am: install rule for these
	
	* examples/*/Makefile.examples.in: Explicitly specify --mode=link
	  to plplot_libtool in order to correctly work with vendor compilers.

	* src/plctrl.c: Fix to 'Bug in library: Segmentation fault if "Q" hit'

2002-12-24  Alan W. Irwin <airwin@users.sourceforge.net>

	* examples/*/Makefile.examples.in: clean target

	* examples/*/Makefile.am: implement install of Makefile.examples
	  renamed to Makefile for user convenience.

	* bindings/octave/Makefile.am: implement separate creation of
	  plplot_octave.oct for build area and install area.

2002-12-23  Alan W. Irwin <airwin@users.sourceforge.net>

	* examples/*/Makefile.examples.in: use CC, CXX, and F77 symbols to
	  avoid hard-coded compiler names.
