@@ -42,98 +42,6 @@ class x16 {
 	  }
      }
 
-/*----------------------------------------------------------------------*\
- * Temporary API for plshades() until it is defined properly in javabind.c
- *
- * Shade regions via a series of calls to plshade.
- * All arguments are the same as plshade except the following:
- * clevel is a pointer to an array of values representing 
- * the shade edge values, nlevel-1 is
- * the number of different shades, (nlevel is the number of shade edges),
- * fill_width is the pattern fill width, and cont_color and cont_width
- * are the color and width of the contour drawn at each shade edge.
- * (if cont_color <= 0 or cont_width <=0, no such contours are drawn).
-\*----------------------------------------------------------------------*/
-
-   void plshades_local1(double [][] a,
-		  double xmin, double xmax, double ymin, double ymax,
-		  double [] clevel, int nlevel, int fill_width,
-		  int cont_color, int cont_width, int rectangular,
-		  double [] x, double [] y,
-		  int wrap)
-     //API note, x, and y and wrap are ignored for now because plshade is
-     //very incompletely implemented in javabind.c.  Also, in this local
-     //version of plshades, clevel array is handled explicitly with int nlevel, but
-     //nlevel will disappear for final javabind.c version.
-     //
-     {
-	double shade_min, shade_max, shade_color;
-	int i, init_color, init_width;
-	
-	for (i = 0; i < nlevel-1; i++) {
-	   shade_min = clevel[i];
-	   shade_max = clevel[i+1];
-	   shade_color = i / (double) (nlevel-2);
-      /* The constants in order mean 
-       * (1) color map1,
-       * (0, 0, 0, 0) all edge effects will be done with plcont rather
-       * than the normal plshade drawing which gets partially blocked
-       * when sequential shading is done as in the present case */
-      
-	   pls.plshade(a, xmin, xmax, ymin, ymax,
-		   shade_min, shade_max,
-		   1, shade_color, fill_width,
-		   0, 0, 0, 0,
-		   rectangular);
-	}
-	if(cont_color > 0 && cont_width > 0) {
-	   // Note, don't bother with cont_color and cont_width setting.
-	   // since this local plshades will disappear soon in any case.
-//	   pls.plcol0(cont_color);
-//	   pls.plwid(cont_width);
-	   pls.plcont(a, clevel, x, y, wrap);
-	}
-}
-   void plshades_local2(double [][] a,
-		  double xmin, double xmax, double ymin, double ymax,
-		  double [] clevel, int nlevel, int fill_width,
-		  int cont_color, int cont_width, int rectangular,
-		  double [][] x, double [][] y,
-		  int wrap)
-     //API note, x, and y and wrap are ignored for now because plshade is
-     //very incompletely implemented in javabind.c.  Also, in this local
-     //version of plshades, clevel array is handled explicitly with int nlevel, but
-     //nlevel will disappear for final javabind.c version.
-     //
-     {
-	double shade_min, shade_max, shade_color;
-	int i, init_color, init_width;
-	
-	for (i = 0; i < nlevel-1; i++) {
-	   shade_min = clevel[i];
-	   shade_max = clevel[i+1];
-	   shade_color = i / (double) (nlevel-2);
-      /* The constants in order mean 
-       * (1) color map1,
-       * (0, 0, 0, 0) all edge effects will be done with plcont rather
-       * than the normal plshade drawing which gets partially blocked
-       * when sequential shading is done as in the present case */
-      
-	   pls.plshade(a, xmin, xmax, ymin, ymax,
-		   shade_min, shade_max,
-		   1, shade_color, fill_width,
-		   0, 0, 0, 0,
-		   rectangular);
-	}
-	if(cont_color > 0 && cont_width > 0) {
-	   // Note, don't bother with cont_color and cont_width setting.
-	   // since this local plshades will disappear soon in any case.
-//	   pls.plcol0(cont_color);
-//	   pls.plwid(cont_width);
-	   pls.plcont(a, clevel, x, y, wrap);
-   }
-}
-   
    // Does a variety of shade plots with continuous (cmap1) colours
 
    public static void main( String[] args ) 
@@ -147,10 +55,10 @@ class x16 {
 	double x, y, argx, argy, distort, r, t, zmin, zmax;
 	double[] px = new double[PERIMETERPTS];
 	double[] py = new double[PERIMETERPTS];
-	double[] xg0 = new double[XPTS];
-	double[] yg0 = new double[YPTS];
-	double[] xg1 = new double[XPTS];
-	double[] yg1 = new double[YPTS];
+	double[][] xg0 = new double[XPTS][YPTS];
+	double[][] yg0 = new double[XPTS][YPTS];
+	double[][] xg1 = new double[XPTS][YPTS];
+	double[][] yg1 = new double[XPTS][YPTS];
 	double[][] z = new double[XPTS][YPTS];
 	double[][] w = new double[XPTS][YPTS];
 	double[][] xg2 = new double[XPTS][YPTS];
@@ -201,13 +109,15 @@ class x16 {
 	      argy = y * Math.PI/2;
 	      distort = 0.4;
 
-	      // Note these are one-dimensional because of arrangement of
-	      //zeros in the final tr definition above.
-	      xg0[i] = x;
-	      yg0[j] = y;
+	      // Note xg0 ==> yg1 are one-dimensional because of arrangement of
+	      //zeros in the final tr definition above.  However, for now
+	      //we are using raw interface here so must nominally treat them
+	      //as two-dimensional.
+	      xg0[i][j] = x;
+	      yg0[i][j] = y;
 
-	      xg1[i] = x + distort * Math.cos(argx);
-	      yg1[j] = y - distort * Math.cos(argy);
+	      xg1[i][j] = x + distort * Math.cos(argx);
+	      yg1[i][j] = y - distort * Math.cos(argy);
 
 	      xg2[i][j] = x + distort * Math.cos(argx) * Math.cos(argy);
 	      yg2[i][j] = y - distort * Math.cos(argx) * Math.cos(argy);
@@ -222,10 +132,10 @@ class x16 {
 
 	pls.plpsty(0);
 
-	plshades_local1(z, -1., 1., -1., 1., 
-		 shedge, NSHADES+1, fill_width,
+	pls.plshades(z, -1., 1., -1., 1., 
+		 shedge, fill_width,
 		 cont_color, cont_width,
-		 1, xg0, yg0, 0);
+		 1, xg0, yg0);
 
 	pls.plcol0(1);
 	pls.plbox("bcnst", 0.0, 0, "bcnstv", 0.0, 0);
@@ -240,10 +150,10 @@ class x16 {
 
 	pls.plpsty(0);
 
-	plshades_local1(z, -1., 1., -1., 1., 
-	     shedge, NSHADES+1, fill_width,
+	pls.plshades(z, -1., 1., -1., 1., 
+	     shedge, fill_width,
 	     cont_color, cont_width,
-	     1, xg1, yg1, 0);
+	     1, xg1, yg1);
 
 	pls.plcol0(1);
 	pls.plbox("bcnst", 0.0, 0, "bcnstv", 0.0, 0);
@@ -259,15 +169,15 @@ class x16 {
 
 	pls.plpsty(0);
 
-	plshades_local2(z, -1., 1., -1., 1., 
-		 shedge, NSHADES+1, fill_width,
+	pls.plshades(z, -1., 1., -1., 1., 
+		 shedge, fill_width,
 		 cont_color, cont_width,
-		 0, xg2, yg2, 0);
+		 0, xg2, yg2);
 
 	pls.plcol0(1);
 	pls.plbox("bcnst", 0.0, 0, "bcnstv", 0.0, 0);
 	pls.plcol0(2);
-	pls.plcont(w, clevel, xg2, yg2, 0);
+	pls.plcont(w, 1, XPTS, 1, YPTS, clevel, xg2, yg2);
 
 	pls.pllab("distance", "altitude", "Bogon density, with streamlines");
 
@@ -279,10 +189,10 @@ class x16 {
 
 	pls.plpsty(0);
 
-	plshades_local2(z, -1., 1., -1., 1., 
-		 shedge, NSHADES+1, fill_width,
+	pls.plshades(z, -1., 1., -1., 1., 
+		 shedge, fill_width,
 		 2, 3,
-		 0, xg2, yg2, 0);
+		 0, xg2, yg2);
 
 	pls.plcol0(1);
 	pls.plbox("bcnst", 0.0, 0, "bcnstv", 0.0, 0);
@@ -323,10 +233,10 @@ class x16 {
 	for (i = 0; i < NSHADES+1; i++)
 	  shedge[i] = zmin + (zmax - zmin) * (double) i / (double) NSHADES;
 
-	plshades_local2(z, -1., 1., -1., 1., 
-		 shedge, NSHADES+1, fill_width,
+	pls.plshades(z, -1., 1., -1., 1., 
+		 shedge, fill_width,
 		 cont_color, cont_width,
-		 0, xg2, yg2, 0);
+		 0, xg2, yg2);
 
 // Now we can draw the perimeter.  (If do before, shade stuff may overlap.)
 	for (i = 0; i < PERIMETERPTS; i++) {
@@ -335,7 +245,7 @@ class x16 {
 	   py[i] = Math.sin(t);
 	}
 	pls.plcol0(1);
-	pls.plline(PERIMETERPTS, px, py);
+	pls.plline(px, py);
                   
 	// And label the plot.
 
